<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/name_task_hint"
        android:textSize="@dimen/name_task_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:hint="@string/date_hint"
        app:boxBackgroundColor="@color/white"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_date"
        app:endIconMode="custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_task">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:hint="@string/start_time_hint"
        app:boxBackgroundColor="@color/white"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_time"
        app:endIconMode="custom"
        app:layout_constraintEnd_toStartOf="@id/end_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/start_time_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="time" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/end_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:hint="@string/end_time_hint"
        app:boxBackgroundColor="@color/white"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_time"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/start_time"
        app:layout_constraintTop_toBottomOf="@+id/date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/end_time_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="time" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/description_field_hint"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/end_time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>